Ignore .LLaMA-Factory-Cold-Start data directory

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ checkpoints/
 wandb/
 wandb_offline/
 LLaMA-Factory-Cold-Start/data/cold_start//.LLaMA-Factory-Cold-Start/
+/.LLaMA-Factory-Cold-Start/
