Added evaluation outputs and results

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ wandb/
 wandb_offline/
 LLaMA-Factory-Cold-Start/data/cold_start//.LLaMA-Factory-Cold-Start/
 /.LLaMA-Factory-Cold-Start/
+Evaluation/Raw-Outputs/
