--- a/.gitignore
+++ b/.gitignore
@@ -177,4 +177,5 @@ wandb/
 wandb_offline/
 LLaMA-Factory-Cold-Start/data/cold_start//.LLaMA-Factory-Cold-Start/
 /.LLaMA-Factory-Cold-Start/
+LLaMA-Factory-Cold-Start/data/cold_start/
 Evaluation/Raw-Outputs/
